# densitas

./: .gitignore  COPYING  ChangeLog  Makefile.am  README  configure.ac
src/lib/: Makefile.am  densitas_error.cpp  task_manager.cpp  thread_pool.cpp  version.cpp
src/lib/densitas/: all.hpp  densitas_error.hpp  density_estimator.hpp  manipulation.hpp  math.hpp  matrix_adapter.hpp  matrix_adaptor.hpp  model_adapter.hpp  model_adaptor.hpp  task_manager.hpp  thread_pool.hpp  type_check.hpp  vector_adapter.hpp  vector_adaptor.hpp  version.hpp
test/: Makefile.am  densitas_error.cpp  density_estimator.cpp  manipulation_assign_vector_to_row.cpp  manipulation_extract_row.cpp  manipulation_predict_proba_for_row.cpp  math_centers.cpp  math_linspace.cpp  math_make_classification_target.cpp  math_minimum.cpp  math_quantile.cpp  math_quantiles.cpp  math_quantiles_weighted.cpp  matrix_adapter.cpp  matrix_adaptor.cpp  model_adapter.cpp  model_adaptor.cpp  real_world_with_liblinear.cpp  task_manager.cpp  thread_pool.cpp  utils.hpp  vector_adapter.cpp  vector_adaptor.cpp  version.cpp
